Update: Enhanced collection management features and documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,94 +1,149 @@
-cmake_minimum_required(VERSION 3.10)
-project(collector)
+cmake_minimum_required(VERSION 3.31.6)
+project(mediamatrix)
 
-# Find required Qt packages
-find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
+# Find required packages
+find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)
 
-# Set Qt paths
-set(QT_DIR "D:/Qt/6.8.1/msvc2022_64")
-set(QT_BIN_DIR "${QT_DIR}/bin")
-set(QT_PLUGINS_DIR "${QT_DIR}/plugins")
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Set COBOL paths
-set(COBOL_INCLUDE_DIR "C:/GnuCOBOL/include")
-set(COBOL_LIB_DIR "C:/GnuCOBOL/lib_x64")
+# Enable Qt features
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+
+# Set GnuCOBOL paths
+set(GNUCOBOL_DIR "C:/GnuCOBOL")
+set(GNUCOBOL_INCLUDE_DIR "${GNUCOBOL_DIR}/include")
+set(GNUCOBOL_LIB_DIR "${GNUCOBOL_DIR}/lib_x64")
 
 # Add include directories
-include_directories(${COBOL_INCLUDE_DIR} include)
-
-# Create data files if they don't exist
-foreach(DATA_FILE movies.dat tvseries.dat anime.dat games.dat manga.dat comics.dat books.dat magazines.dat)
-    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATA_FILE}")
-        file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATA_FILE}" "")
-    endif()
-endforeach()
-
-# Set output directories
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-# Set output directories for all configurations
-foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/bin)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/bin)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/bin)
-endforeach()
-
-# Create shared library for collector_wrapper
-add_library(collector_wrapper_lib SHARED
-    src/c/collector_wrapper.c
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix/core
+    ${GNUCOBOL_INCLUDE_DIR}
 )
 
-target_link_libraries(collector_wrapper_lib
-    "${COBOL_LIB_DIR}/libcob.lib"
+# C wrapper library
+add_library(mm_wrapper SHARED
+    src/core/mm_wrapper.c
 )
 
-# Create GUI executable
-add_executable(collector_gui
-    src/cpp/collector_gui.cpp
-    include/item_dialog.h
+target_include_directories(mm_wrapper PRIVATE
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix/core
+    ${GNUCOBOL_INCLUDE_DIR}
 )
 
-# Enable Qt features for collector_gui
-set_target_properties(collector_gui PROPERTIES
-    AUTOMOC ON
-    AUTORCC ON
-    AUTOUIC ON
-    WIN32_EXECUTABLE ON
-    OUTPUT_NAME "collector_gui"
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+# Link against the COBOL library
+target_link_libraries(mm_wrapper PRIVATE
+    ${CMAKE_BINARY_DIR}/mediamatrix.lib
+    ${GNUCOBOL_LIB_DIR}/libcob.lib
 )
 
-target_link_libraries(collector_gui
-    collector_wrapper_lib
+# GUI executable
+set(GUI_SOURCES
+    src/gui/main.cpp
+    src/gui/mm_main_window.cpp
+    src/gui/mm_item_dialog.cpp
+)
+
+set(GUI_HEADERS
+    include/mediamatrix/gui/mm_main_window.h
+    include/mediamatrix/gui/mm_item_dialog.h
+)
+
+add_executable(mediamatrix_gui ${GUI_SOURCES} ${GUI_HEADERS})
+
+target_include_directories(mediamatrix_gui PRIVATE
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix/core
+    "D:/Qt/6.8.1/msvc2022_64/include"
+    "D:/Qt/6.8.1/msvc2022_64/include/QtCore"
+    "D:/Qt/6.8.1/msvc2022_64/include/QtGui"
+    "D:/Qt/6.8.1/msvc2022_64/include/QtWidgets"
+)
+
+target_link_libraries(mediamatrix_gui PRIVATE
     Qt6::Core
+    Qt6::Gui
     Qt6::Widgets
+    mm_wrapper
 )
 
-# Create console executable
-add_executable(collector_wrapper
-    src/c/collector_wrapper.c
+# Console application
+add_library(mediamatrix_console SHARED
+    src/core/mm_wrapper.c
 )
 
-set_target_properties(collector_wrapper PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+target_include_directories(mediamatrix_console PRIVATE
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix
+    ${CMAKE_SOURCE_DIR}/include/mediamatrix/core
+    ${GNUCOBOL_INCLUDE_DIR}
 )
 
-target_link_libraries(collector_wrapper
-    "${COBOL_LIB_DIR}/libcob.lib"
+target_link_libraries(mediamatrix_console PRIVATE
+    mm_wrapper
+    ${CMAKE_BINARY_DIR}/mediamatrix.lib
+    ${GNUCOBOL_LIB_DIR}/libcob.lib
 )
 
-# Add custom commands to copy Qt DLLs and plugins post-build
-add_custom_command(TARGET collector_gui POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:collector_gui>/platforms"
+# Copy DLLs and plugins to output directory
+add_custom_command(TARGET mediamatrix_gui POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${QT_BIN_DIR}/Qt6Core.dll"
-        "${QT_BIN_DIR}/Qt6Gui.dll"
-        "${QT_BIN_DIR}/Qt6Widgets.dll"
-        "$<TARGET_FILE_DIR:collector_gui>"
+        $<TARGET_FILE:Qt6::Core>
+        $<TARGET_FILE:Qt6::Gui>
+        $<TARGET_FILE:Qt6::Widgets>
+        ${CMAKE_BINARY_DIR}/mediamatrix.dll
+        $<TARGET_FILE_DIR:mediamatrix_gui>
+    COMMAND ${CMAKE_COMMAND} -E make_directory
+        $<TARGET_FILE_DIR:mediamatrix_gui>/plugins/platforms
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${Qt6_DIR}/../../../plugins/platforms
+        $<TARGET_FILE_DIR:mediamatrix_gui>/plugins/platforms
+)
+
+# Create qt.conf file
+file(WRITE ${CMAKE_BINARY_DIR}/qt.conf "[Paths]\nPlugins = ./plugins")
+add_custom_command(TARGET mediamatrix_gui POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${QT_PLUGINS_DIR}/platforms/qwindows.dll"
-        "$<TARGET_FILE_DIR:collector_gui>/platforms"
+        ${CMAKE_BINARY_DIR}/qt.conf
+        $<TARGET_FILE_DIR:mediamatrix_gui>/qt.conf
+)
+
+# Create data directory
+add_custom_command(TARGET mediamatrix_gui POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory
+        $<TARGET_FILE_DIR:mediamatrix_gui>/data
+)
+
+# Copy GnuCOBOL DLLs to output directory
+add_custom_command(TARGET mediamatrix_gui POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${GNUCOBOL_DIR}/bin_x64/libcob.dll"
+        "${GNUCOBOL_DIR}/bin_x64/libdb48.dll"
+        "${GNUCOBOL_DIR}/bin_x64/liblzma.dll"
+        "${GNUCOBOL_DIR}/bin_x64/libxml2.dll"
+        "${GNUCOBOL_DIR}/bin_x64/mpir.dll"
+        "${GNUCOBOL_DIR}/bin_x64/pdcurses.dll"
+        "${GNUCOBOL_DIR}/bin_x64/zlib1.dll"
+        $<TARGET_FILE_DIR:mediamatrix_gui>
+)
+
+# Copy Qt plugins to output directory
+add_custom_command(TARGET mediamatrix_gui POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:mediamatrix_gui>/plugins"
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:mediamatrix_gui>/plugins/platforms"
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:mediamatrix_gui>/plugins/styles"
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${Qt6_DIR}/../../../plugins/platforms/qwindows.dll"
+        "$<TARGET_FILE_DIR:mediamatrix_gui>/plugins/platforms/"
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${Qt6_DIR}/../../../plugins/styles/qmodernwindowsstyle.dll"
+        "$<TARGET_FILE_DIR:mediamatrix_gui>/plugins/styles/"
 ) 
