--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,56 @@
 # Build directories
 build/
 bin/
-Debug/
-Release/
-x64/
+
+# IDE and editor files
+.vs/
+.vscode/
+*.swp
+*~
+
+# COBOL data files
+*.dat
+
+# CMake generated files
+CMakeFiles/
+CMakeCache.txt
+*.cmake
+Makefile
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Qt-specific
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+*.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
 
 # Visual Studio files
-.vs/
 *.sln
 *.vcxproj
 *.vcxproj.filters
@@ -19,35 +63,23 @@ x64/
 *.VC.db
 *.VC.VC.opendb
 
-# COBOL build artifacts
-*.dll
-*.lib
-*.exp
-*.def
-*.obj
-*.exe
-
-# Qt generated files
-*.moc
-*.moc.cpp
-*.moc.h
-*.ui.h
-*.qrc.cpp
-*.qrc.h
-
 # Data files
 data/*.dat
 
 # IDE specific files
 .idea/
-.vscode/
 *.swp
 *.swo
-*~
 
 # OS specific files
 .DS_Store
 Thumbs.db
 
 # Development planning files
-ROADMAP.md 
+ROADMAP.md
+
+# Images and screenshots
+Screenshot*.png
+Screenshot*.jpg
+Greenshot*.png
+Greenshot*.jpg 
